[package]
name = "ln_drawer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.2"
cosmic-text = "0.14.2"
env_logger = "0.11.8"
glam = "0.30.5"
hashbrown = "0.15.5"
image = "0.25.6"
log = "0.4.27"
octotablet.git = "https://github.com/Lineoo/octotablet.git"
palette = "0.7.6"
parking_lot = "0.12.4"
pollster = "0.4.0"
tokio = "1.47.1"
wgpu = "26.0"
winit = "0.30"

# [patch."https://github.com/Lineoo/octotablet.git"]
# octotablet.path = "../octotablet"