[package]
name = "ln_drawer"
version = "0.1.0-alpha2"
edition = "2024"

[dependencies]
bytemuck = "1.23.2"
cosmic-text = "0.14.2"
env_logger = "0.11.8"
glam = "0.30.5"
hashbrown = "0.15.5"
image = "0.25.6"
indexmap = "2.11.0"
log = "0.4.27"
palette = "0.7.6"
parking_lot = "0.12.4"
pollster = "0.4.0"
smallvec = "1.15.1"
thiserror = "2.0.16"
tokio = "1.47.1"
wgpu = "26.0"
winit = "0.30"
