[package]
name = "ln_drawer"
version = "0.1.2"
edition = "2024"

[lib]
name = "ln_drawer"
crate-type = ["lib", "cdylib"]

[dependencies]
bytemuck = "1.23.2"
cosmic-text = "0.14.2"
env_logger = "0.11.8"
glam = "0.30.5"
hashbrown = "0.15.5"
image = "0.25.6"
indexmap = "2.11.0"
log = "0.4.27"
palette = "0.7.6"
parking_lot = "0.12.4"
pollster = "0.4.0"
postcard = { version = "1.1.3", features = ["use-std"] }
rodio = { version = "0.21.1", features = ["noise"] }
serde = "1.0.228"
smallvec = "1.15.1"
thiserror = "2.0.16"
tokio = "1.47.1"
wgpu = "28.0"

[dependencies.winit]
version = "0.31.0-beta.2"
features = ["android-native-activity"]

[patch.crates-io.winit]
git = "https://github.com/Lineoo/winit/"
branch = "ln_drawer"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1

[package.metadata.android]
package = "org.ln_drawer.ln_drawer"
resources = "android"

[package.metadata.android.sdk]
min_sdk_version = 26

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "LnDrawer"
