[package]
name = "ln_drawer"
version.workspace = true
edition.workspace = true

[lib]
name = "ln_drawer"
crate-type = ["lib", "cdylib"]

[dependencies]
bytemuck = "1.23.2"
cosmic-text = "0.14.2"
dirs = "6.0.0"
env_logger = "0.11.8"
glam = "0.30.5"
hashbrown = { version = "0.15.5", features = ["serde"] }
image = "0.25.6"
indexmap = "2.11.0"
log = "0.4.27"
memmap2 = "0.9.10"
palette = "0.7.6"
parking_lot = "0.12.4"
pollster = "0.4.0"
postcard = { version = "1.1.3", features = ["use-std"] }
redb = "3.1.1"
rodio = { version = "0.21.1", features = ["noise"] }
serde = "1.0.228"
serde_bytes = "0.11.19"
smallvec = "1.15.1"
thiserror = "2.0.16"
tokio = "1.47.1"
wgpu = "28.0"
zstd = "0.13.3"

[dependencies.ln_world]
path = "../ln_world"

[dependencies.winit]
version = "0.31.0-beta.2"
features = ["android-native-activity"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[package.metadata.android]
package = "dev.linn.lndrawer"
resources = "android"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34

[package.metadata.android.application]
icon = "@mipmap/icon_dev"
label = "LnDrawer Dev"
